--- a/responsiveWebDesign/Projects/persPortfolioPage/styles.css
+++ b/responsiveWebDesign/Projects/persPortfolioPage/styles.css
@@ -30,6 +30,8 @@ body {
     color: var(--white);
 }
 
+/* Navigation menu */
+
 #navbar {
     position: fixed;
     top: 0;
@@ -61,9 +63,22 @@ body {
     text-shadow: 0 0 5px var(--white);
 }
 
+@media (max-width: 1050px) {
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 12vh;
+    }
+}
+
+/* Main sections */
+
 main {
     background-color: var(--darkblue);
 }
+
+/* welcome section */
 
 #welcome-section {
     height: 100vh;
@@ -95,22 +110,34 @@ main {
         text-shadow: 0 0 2px var(--bluegreen);
     }
     50% {
-        text-shadow: 0 0 6px var(--bluegreen);
+        color: var(--bluegreen);
+        text-shadow: 0 0 8px var(--bluegreen);
     }
     100% {
         text-shadow: 0 0 2px var(--bluegreen);
     }
 }
 
+@media (max-width: 1050px) {
+    #welcome-section {
+        text-align: center;
+    }    
+}
+
+/* projects section */
+
 #projects {
     background-color: var(--greyblue);
     height: 100vh;
     padding: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     text-align: center;
 }
 
 #projects>h1 {
-    text-align: center;
     font-weight: bold;
     font-size: 4rem;
 }
@@ -131,11 +158,81 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    column-gap: 1rem;
+    font-size: 2rem;
 }
 
-#projects>button {
-    
+.project-tile>a {
+    text-decoration: none;
+    color: var(--white);
+    display: flex;
+    flex-flow: column;
+    row-gap: 3rem;
+    transition: 0.5s ease-out;
 }
+
+.project-tile>a>i,
+.desc>i {
+    transition: 0.5s ease-out;
+}
+
+.project-tile>a:hover {
+    text-shadow: 0 0 10px var(--bluegreen);
+}
+
+.project-tile>a:hover>i {
+    transform: scale(1.3);
+}
+
+.project-tile>a:hover>div>i,
+.project-tile>a:active {
+    color: var(--bluegreen);
+}
+
+.project-tile>a:active>div>i {
+    color: var(--white);
+}
+
+#projects .button {
+    text-decoration: none;
+    color: var(--white);
+    background-color: var(--bluegreen);
+    border: 1px solid var(--greyblue);
+    width: 12rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 1rem;
+    box-shadow: 0 0 10px var(--bluegreen);
+    transition: 0.5s;
+}
+
+#projects .button>i {
+    transition-duration: 2s;
+}
+
+#projects .button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px var(--white);
+}
+
+#projects .button:hover>i {
+    transform: rotate(360deg);
+    color: var(--darkblue);
+}
+
+#projects .button:active>i {
+    color: var(--darkblue);
+}
+
+@media (max-width: 1050px) {
+    #projects>h1 {
+        padding-top: 5rem;
+    }    
+}
+
+/* Socials section */
 
 #socials {
     height: 95vh;
@@ -143,12 +240,74 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    row-gap: 6rem;
 }
+
+.socials-grid {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 4rem;
+}
+
+.socials-grid>a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: var(--white);
+    transition: 0s;
+}
+
+.socials-grid>a>i {
+    transition: 0.5s ease-in-out;
+}
+
+.socials-grid>a>i:last-child {
+    transform: translateY(50px);
+
+}
+
+.socials-grid>a:hover {
+    color: var(--bluegreen);
+}
+
+.socials-grid>a:hover>i:last-child {
+    transform: translateY(0px);
+}
+
+@media (max-width: 1050px) {
+    #socials {
+        text-align: center;
+    }    
+}
+
+/* footer section */
 
 footer {
     height: 5vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: var(--white);
+    padding: 1rem;
+    background-color: var(--darkgrey);
 }
 
-/* @media {
-    
-} */
+.disclaimer>i {
+    color: var(--darkblue);
+    animation: glow2 2s ease-in-out infinite;
+}
+
+@keyframes glow2 {
+    0% {
+        text-shadow: 0 0 2px var(--bluegreen);
+    }
+    50% {
+        /* color: var(--bluegreen); */
+        text-shadow: 0 0 8px var(--bluegreen);
+    }
+    100% {
+        text-shadow: 0 0 2px var(--bluegreen);
+    }
+}
